--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-project",
   "version": "0.0.1",
   "description": "Project created to serve as a boilerplate for iac projects.",
+  "license": "MIT",
   "main": "index.ts",
   "scripts": {
     "compile": "rm -rf ./bin && tsc --project tsconfig.bin.json",
