--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "@jest/types": "27.5.1",
     "@types/jest": "26.0.23",
     "@types/node": "^17.0.40",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
     "eslint": "7.32.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "7.0.0",
-    "gts": "3.1.0",
+    "gts": "^4.0.0",
     "jest": "27.2.3",
     "jest-junit": "12.3.0",
     "moq.ts": "7.3.4",
     "ts-jest": "27.0.5",
     "ts-node": "10.8.1",
-    "typescript": "4.4.3"
+    "typescript": "4.8.4"
   },
   "dependencies": {
     "@pulumi/aws": "^5.0.0",
