--- a/package.json
+++ b/package.json
@@ -15,21 +15,21 @@
     "iac:down": "pulumi destroy"
   },
   "devDependencies": {
-    "@faker-js/faker": "6.1.2",
-    "@jest/types": "27.5.1",
-    "@types/jest": "26.0.23",
-    "@types/node": "^17.0.40",
+    "@faker-js/faker": "^7.5.0",
+    "@jest/types": "^29.0.3",
+    "@types/jest": "^29.0.3",
+    "@types/node": "^18.7.21",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "eslint": "7.32.0",
+    "eslint": "^8.24.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-simple-import-sort": "7.0.0",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "gts": "^4.0.0",
-    "jest": "27.2.3",
-    "jest-junit": "12.3.0",
-    "moq.ts": "7.3.4",
-    "ts-jest": "27.0.5",
-    "ts-node": "10.8.1",
+    "jest": "^29.0.3",
+    "jest-junit": "^14.0.1",
+    "moq.ts": "^9.0.2",
+    "ts-jest": "^29.0.2",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.4"
   },
   "dependencies": {
