--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,13 +10,18 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: '[ACTION] | Clone build iac action'
-        uses: actions/checkout@v3
-        with:
-          repository: heronlabs/build-iac-action
-          ref: 2.0.0
-          token: ${{ secrets.AUTHOR_PERSONAL_ACCESS}}
-          path: ./build-iac-action
+      - name: '[BUILD] | Install Dependencies'
+        run: yarn install --frozen-lockfile
+        shell: bash
 
-      - name: '[ACTION] | Run build iac action'
-        uses: './build-iac-action/application/github'
+      - name: '[BUILD] | Compile'
+        run: yarn compile
+        shell: bash
+
+      - name: '[TEST] | Lint Check'
+        run: yarn lint:check
+        shell: bash
+
+      - name: '[TEST] | Unit Tests'
+        run: yarn test:unit --coverage
+        shell: bash
